fixed homescreen proj image transform bug that broke z-index

--- a/src/index.css
+++ b/src/index.css
@@ -1280,7 +1280,9 @@ footer {
 	.card:hover img,
 	.card:focus img {
 		transform: scale(1.10);
+		z-index: 2;
 	}
+
 	
 	.proj_title {
 		font-size: 1.25rem;
@@ -1506,8 +1508,9 @@ footer {
 
 	.section_header {
 		position: sticky;
-		top: 8.5vh;
+		top: 8.3vh;
 		width: 100%;
+		z-index: 3;
 	}
 
 	.section_title_container {
@@ -1669,7 +1672,7 @@ footer {
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	font-family: 'passion_one_regular', sans-serif;
-	font-size: 4rem;
+	font-size: 3.5rem;
 	padding: 0 0 0 25%;
 /*	background: orange;*/
 	max-width: 65%;
